# STM32-AzureRTOS

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
courses/netxduo/Driver/: nx_linux_network_driver.c
courses/netxduo/ProjectHelloWorld/: CMakeLists.txt  main.c
courses/netxduo/ProjectUDPEchoClient/: CMakeLists.txt  main.c
courses/netxduo/ProjectUDPEchoServer/: CMakeLists.txt  main.c  nx_user.h
tools/: init_network.sh
